# Nox_robot

./: README.md
Arduino/motor_controller_v2_AFMS/: motor_controller_v2_AFMS.ino  motor_controller_v2_AFMS.ino.standard.hex  motor_controller_v2_AFMS.ino.with_bootloader.standard.hex
CAD/Solidworks/: Angle small 30.SLDPRT  Angle small 50.SLDPRT  Battery_11v.SLDPRT  Electronic support.SLDPRT  Frame_front_center_1.sldprt  Frame_front_center_2.sldprt  Frame_front_left_1.sldprt  Frame_front_left_2.sldprt  Frame_front_left_3.sldprt  Frame_front_left_4.sldprt  Frame_front_left_5.sldprt  Frame_left_1.sldprt  Frame_left_2.sldprt  Frame_left_3.sldprt  Frame_rear_1.sldprt  Mounting_bracket.SLDPRT  Mounting_bracket_50.SLDPRT  Mounting_bracket_long.SLDPRT  Mounting_bracket_small.SLDPRT  Nox.SLDASM  Roller_wedge.SLDPRT  arduino motor shield.SLDPRT  base.SLDPRT  rear_support.sldprt
nox/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
nox/cfg/: amcl_params.yaml  amcl_params.yaml~  base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  dwa_local_planner_params.yaml  dwa_local_planner_params.yaml~  dwa_planner_params.yaml~  dwa_test.yaml~  global_costmap_params.yaml  local_costmap_params.yaml~  (+8 more)
nox_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  urdf.rviz
nox_description/launch/: load_param.launch~  nox_rviz.launch  ptype_wa_rviz.launch~
nox_description/meshes/: base.STL  kinect_sensor.stl  motor.STL  support_wheel.STL  wheel.STL
nox_description/urdf/: nox.urdf
(+115 files in other folders)
